layout issue fix

--- a/public/stylesheets/admin/navbar.css
+++ b/public/stylesheets/admin/navbar.css
@@ -17,7 +17,6 @@
 body {
   font-family: "Rubik";
   overflow-x: hidden;
-  width: 100vw;
   padding: 0;
   padding-top: 10vh;
 }
